modified path of homepage in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kaushalchavda2000.github.io/",
+  "homepage": "https://kaushalchavda2000.github.io",
   "name": "ecommerce",
   "version": "0.1.0",
   "private": true,
